--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#accountUser input:focus {
+  outline: none;
+  box-shadow: rgb(230, 240, 255) 0px 0px 0px 4px;
+  border-color: rgb(56, 97, 251);
+}
+#account button:hover {
+  box-shadow: rgb(234, 241, 248) 0px 0px 0px 3px;
+}
+.autoComplate input {
+  color: rgb(166, 176, 195);
+  border-radius: 4px;
+  background-color: rgb(239, 242, 245);
+}
+.autoComplate input:hover {
+  outline: none;
+  outline-offset: none;
+  border: none;
+  box-shadow: rgb(230, 240, 255) 0px 0px 0px 4px;
+  border-color: rgb(56, 97, 251);
+}
