--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,4 +37,8 @@
 #accountmobile button:focus{
   box-shadow: rgb(234, 241, 248) 0px 0px 0px 3px;
 
+}
+.nextpage nav ul{
+display: flex;
+justify-content: center;
 }
